--- a/app/design/frontend/gs-default/default/layout/checkout.xml
+++ b/app/design/frontend/gs-default/default/layout/checkout.xml
@@ -90,7 +90,10 @@ Default layout, loads most of the pages
                 <block type="checkout/cart_shipping" name="checkout.cart.shipping" as="shipping" template="checkout/cart/shipping.phtml"/>
                 <block type="checkout/cart_crosssell" name="checkout.cart.crosssell" as="crosssell" template="checkout/cart/crosssell.phtml"/>
 
-                <block type="checkout/cart_totals" name="checkout.cart.totals" as="totals" template="checkout/cart/totals.phtml"/>
+                <block type="checkout/cart_totals" name="checkout.cart.totals" as="totals" template="checkout/cart/totals.phtml">
+					 <block type="checkout/cart_coupon" name="checkout.cart.coupon" as="coupon" template="checkout/cart/coupon.phtml"/>
+				</block>
+				
             </block>
         </reference>
         <block type="core/text_list" name="additional.product.info" translate="label">
