--- a/app/design/frontend/gs-default/default/layout/local.xml
+++ b/app/design/frontend/gs-default/default/layout/local.xml
@@ -24,6 +24,7 @@
 		</reference>
 		
 		<reference name="root">
+			 <action method="setTemplate"><template>page/gs-2columns-left.phtml</template></action>
 			<reference name="top.links">
 				<!-- Add the Signup Link to top links in the header block -->
 				<action method="addLink" translate="label title">
