--- a/app/design/frontend/gs-default/default/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/gs-default/default/template/checkout/cart/item/default.phtml
@@ -77,9 +77,9 @@ $product =  Mage::getModel('catalog/product')->loadByAttribute('sku',$_item->get
         <div class="price_total">
 			
 			<?php if (Mage::helper('weee')->typeOfDisplay($_item, array(0, 1, 4), 'sales') && $_item->getWeeeTaxAppliedAmount()): ?>
-				<?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()+$_item->getWeeeTaxAppliedAmount()+$_item->getWeeeTaxDisposition()); ?>
+				<?php echo $this->helper('checkout')->getQuote()->getStore()->formatPrice($_item->getCalculationPrice()+$_item->getWeeeTaxAppliedAmount()+$_item->getWeeeTaxDisposition(),false); ?>
 			<?php else: ?>
-				<?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()) ?>
+				<?php echo $this->helper('checkout')->getQuote()->getStore()->formatPrice($_item->getCalculationPrice(),false) ?>
 			<?php endif; ?>
             
         </div>
@@ -89,9 +89,9 @@ $product =  Mage::getModel('catalog/product')->loadByAttribute('sku',$_item->get
         <div class="price_total">
             <?php $_incl = $this->helper('checkout')->getPriceInclTax($_item); ?>
 			<?php if (Mage::helper('weee')->typeOfDisplay($_item, array(0, 1, 4), 'sales') && $_item->getWeeeTaxAppliedAmount()): ?>
-				<?php echo $this->helper('checkout')->formatPrice($_incl+$_item->getWeeeTaxAppliedAmount()); ?>
+				<?php echo $this->helper('checkout')->getQuote()->getStore()->formatPrice($_incl+$_item->getWeeeTaxAppliedAmount(),false); ?>
 			<?php else: ?>
-				<?php echo $this->helper('checkout')->formatPrice($_incl-$_item->getWeeeTaxDisposition()) ?>
+				<?php echo $this->helper('checkout')->getQuote()->getStore()->formatPrice($_incl-$_item->getWeeeTaxDisposition(),false) ?>
 			<?php endif; ?>           
         </div>
         <?php endif; ?>
@@ -106,9 +106,9 @@ $product =  Mage::getModel('catalog/product')->loadByAttribute('sku',$_item->get
 				<span class="cart-msrp-subtotal">--</span>
 			<?php else: ?>
 				<?php if (Mage::helper('weee')->typeOfDisplay($_item, array(0, 1, 4), 'sales') && $_item->getWeeeTaxAppliedAmount()): ?>
-					<?php echo $this->helper('checkout')->formatPrice($_item->getRowTotal()+$_item->getWeeeTaxAppliedRowAmount()+$_item->getWeeeTaxRowDisposition()); ?>
+					<?php echo $this->helper('checkout')->getQuote()->getStore()->formatPrice($_item->getRowTotal()+$_item->getWeeeTaxAppliedRowAmount()+$_item->getWeeeTaxRowDisposition(),false); ?>
 				<?php else: ?>
-					<?php echo $this->helper('checkout')->formatPrice($_item->getRowTotal()) ?>
+					<?php echo $this->helper('checkout')->getQuote()->getStore()->formatPrice($_item->getRowTotal(),false) ?>
 				<?php endif; ?>
 			<?php endif; ?>
 			
@@ -123,9 +123,9 @@ $product =  Mage::getModel('catalog/product')->loadByAttribute('sku',$_item->get
 					<span class="cart-msrp-subtotal">--</span>
 				<?php else: ?>
 					<?php if (Mage::helper('weee')->typeOfDisplay($_item, array(0, 1, 4), 'sales') && $_item->getWeeeTaxAppliedAmount()): ?>
-						<?php echo $this->helper('checkout')->formatPrice($_incl+$_item->getWeeeTaxAppliedRowAmount()); ?>
+						<?php echo $this->helper('checkout')->getQuote()->getStore()->formatPrice($_incl+$_item->getWeeeTaxAppliedRowAmount(),false); ?>
 					<?php else: ?>
-						<?php echo $this->helper('checkout')->formatPrice($_incl-$_item->getWeeeTaxRowDisposition()) ?>
+						<?php echo $this->helper('checkout')->getQuote()->getStore()->formatPrice($_incl-$_item->getWeeeTaxRowDisposition(),false) ?>
 					<?php endif; ?>
 				<?php endif; ?>
 			
