changes for address book

--- a/app/design/frontend/gs-default/default/template/customer/address/edit.phtml
+++ b/app/design/frontend/gs-default/default/template/customer/address/edit.phtml
@@ -1,79 +1,101 @@
+<?php $conf = Mage::getStoreConfig('general');?>
 <?php if($this->getTitle()): ?>
-<div class="head_result">
-    <?php echo $this->getTitle() ?> 
-</div>
-		<div class="acctn_personal">
-<?php endif; ?>
+	<div class="head_result">
+		<?php echo $this->getTitle() ?> 
+	</div>
+<?php endif; ?> 
+<div class="acctn_personal">
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 <form action="<?php echo $this->getSaveUrl() ?>" method="post" id="form-validate">
-    <?php echo $this->getBlockHtml('formkey')?>
- <table width="100%" border="0" cellspacing="0" cellpadding="0"> 
-    <input type="hidden" name="success_url" value="<?php echo $this->getSuccessUrl() ?>" />
-    <input type="hidden" name="error_url" value="<?php echo $this->getErrorUrl() ?>" />
-        <tr>
-			<td>
-                <?php echo $this->getNameBlockHtml() ?>
-			</td>
-		</tr>
-        <tr>
-			<td>
+
+ <table width="100%" border="0" cellspacing="0" cellpadding="0">  
+	<tr>
+		<td><?php echo $this->getNameBlockHtml() ?></td>
+	</tr>
+	<tr>
+		<td>
+			<label for="telephone" class="required"><em>*</em><?php echo $this->__('Telephone') ?></label> 
+			<input type="text" name="telephone" value="<?php echo $this->escapeHtml($this->getAddress()->getTelephone()) ?>" title="<?php echo $this->__('Telephone') ?>" class="input-text  <?php echo $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" id="telephone" />
+		</td>
+	</tr>           
+
+	<tr>
+		<td>
+			<label for="fax"><?php echo $this->__('Fax') ?></label>
+			<input type="text" name="fax" id="fax" title="<?php echo $this->__('Fax') ?>" value="<?php echo $this->escapeHtml($this->getAddress()->getFax()) ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('fax') ?>" />
+		</td>
+	</tr>   
+	   <tr>
+		<td>
+			<label for="country" class="required"><em>*</em><?php echo $this->__('Country') ?></label>
+			 
+				<?php echo $this->getCountryHtmlSelect() ?>
+			 
+	  </td>
+	</tr> 
+	
+	<tr>
+		<td> 
+			<label for="zip" class="required"><em>*</em><?php echo $this->__('Zip/Postal Code') ?></label> 
+			<input type="text" name="postcode" value="<?php echo $this->escapeHtml($this->getAddress()->getPostcode()) ?>" title="<?php echo $this->__('Zip/Postal Code') ?>" id="zip" class="input-text validate-zip-international <?php echo $this->helper('customer/address')->getAttributeValidationClass('postcode') ?>" />
+					
+			 
+		<div class="btn-dynamic" id="postcode_finder_btn" style="display:none;position:relative;"> <br/>
+					<div class="rad_8 btn_block" style="float:none;width:89px;">  
+						<button type="button" id="postcode_finder" title="<?php echo $this->__('Find Address') ?>" class="button"><span><span><?php echo $this->__('Find Address') ?></span></span></button>
+				   </div>
+			</div>
+		   </td>
+	</tr> 
+	<tr>
+		<td> 
+			<div class="field" id="address_result" ></div>			 
+	  </td>
+	</tr>  
+	
+	<tr>
+		<td> 
+		<?php echo $this->getBlockHtml('formkey')?>
+		<input type="hidden" name="success_url" value="<?php echo $this->getSuccessUrl() ?>" />
+		<input type="hidden" name="error_url" value="<?php echo $this->getErrorUrl() ?>" />  
                 <label for="company"><?php echo $this->__('Company') ?></label> 
-                <input type="text" name="company" id="company" title="<?php echo $this->__('Company') ?>" value="<?php echo $this->escapeHtml($this->getAddress()->getCompany()) ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('company') ?>" />
-			</td>
-		</tr> 
-        <tr>
-			<td>
-				<label for="telephone" class="required"><em>*</em><?php echo $this->__('Telephone') ?></label> 
-                <input type="text" name="telephone" value="<?php echo $this->escapeHtml($this->getAddress()->getTelephone()) ?>" title="<?php echo $this->__('Telephone') ?>" class="input-text  <?php echo $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" id="telephone" />
-         </td>
-		</tr>           
-          
-        <tr>
-			<td>
-				<label for="fax"><?php echo $this->__('Fax') ?></label>
-				<input type="text" name="fax" id="fax" title="<?php echo $this->__('Fax') ?>" value="<?php echo $this->escapeHtml($this->getAddress()->getFax()) ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('fax') ?>" />
-            </td>
-		</tr>   
-		 <tr>
-			<td>
-				<?php echo $this->__('Address') ?></h2>
-			</td>
-		</tr>   
-        <?php $_streetValidationClass = $this->helper('customer/address')->getAttributeValidationClass('street'); ?>
-        <tr>
-			<td>
-                <label for="street_1" class="required"><em>*</em><?php echo $this->__('Street Address') ?></label>
-				<input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getAddress()->getStreet(1)) ?>" title="<?php echo $this->__('Street Address') ?>" id="street_1" class="input-text <?php echo $_streetValidationClass ?>" />
+                    <input type="text" name="company" id="company" title="<?php echo $this->__('Company') ?>" value="<?php echo $this->escapeHtml($this->getAddress()->getCompany()) ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('company') ?>" />
+           
+		  </td>
+	</tr>   
+	<tr>
+		<td> 
+        <?php $_streetValidationClass = $this->helper('customer/address')->getAttributeValidationClass('street'); ?> 
+                <label for="street_1" class="required"><em>*</em><?php echo $this->__('Street Address') ?></label> 
+                    <input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getAddress()->getStreet(1)) ?>" title="<?php echo $this->__('Street Address') ?>" id="street_1" class="input-text <?php echo $_streetValidationClass ?>" />
+        	  </td>
+	</tr>  
+	 <?php $_streetValidationClass = trim(str_replace('required-entry', '', $_streetValidationClass)); ?>
+        <?php for ($_i = 2, $_n = $this->helper('customer/address')->getStreetLines(); $_i <= $_n; $_i++): ?>
+            <tr>
+		<td>   
+               
+                    <input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getAddress()->getStreet($_i)) ?>" title="<?php echo $this->__('Street Address %s', $_i) ?>" id="street_<?php echo $_i ?>" class="input-text <?php echo $_streetValidationClass ?>" />
+                 </td>
+		</tr>  
+        <?php endfor; ?> 
+		<?php if ($this->helper('customer/address')->isVatAttributeVisible()) : ?>  
+		<tr>
+			<td>       
+			<label for="vat_id"><?php echo $this->__('VAT Number') ?></label> 
+				<input type="text" name="vat_id" value="<?php echo $this->escapeHtml($this->getAddress()->getVatId()) ?>" title="<?php echo $this->__('VAT Number') ?>" id="vat_id" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('vat_id') ?>" />
 			</td>
 		</tr>  
-        <?php $_streetValidationClass = trim(str_replace('required-entry', '', $_streetValidationClass)); ?>
-        <?php for ($_i = 2, $_n = $this->helper('customer/address')->getStreetLines(); $_i <= $_n; $_i++): ?> 
+		<?php endif; ?> 
+		<tr>
+		  <td>  
+				<label for="city" class="required"><em>*</em><?php echo $this->__('City') ?></label>			 
+                <input type="text" name="city" value="<?php echo $this->escapeHtml($this->getAddress()->getCity()) ?>"  title="<?php echo $this->__('City') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('city') ?>" id="city" />
+		 </td>
+		</tr>   
 			<tr>
-				<td>
-					<input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getAddress()->getStreet($_i)) ?>" title="<?php echo $this->__('Street Address %s', $_i) ?>" id="street_<?php echo $_i ?>" class="input-text <?php echo $_streetValidationClass ?>" />
-				</td>
-			</tr>  
-        <?php endfor; ?>
-            <?php if ($this->helper('customer/address')->isVatAttributeVisible()) : ?>
-			<tr>
-				<td>
-					<label for="vat_id"><?php echo $this->__('VAT Number') ?></label>
-					<input type="text" name="vat_id" value="<?php echo $this->escapeHtml($this->getAddress()->getVatId()) ?>" title="<?php echo $this->__('VAT Number') ?>" id="vat_id" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('vat_id') ?>" />
-           		</td>
-			</tr>  
-            <?php endif; ?>
-            <tr>
-				<td>
-                    <label for="city" class="required"><em>*</em><?php echo $this->__('City') ?></label>
-                     
-                        <input type="text" name="city" value="<?php echo $this->escapeHtml($this->getAddress()->getCity()) ?>"  title="<?php echo $this->__('City') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('city') ?>" id="city" />
-                  
-              </td>
-			</tr> 
-               <tr>
-				<td>
-                    <label for="region_id" class="required"><em>*</em><?php echo $this->__('State/Province') ?></label>
-                     
+				<td> 
+                    <label for="region_id" class="required"><em>*</em><?php echo $this->__('State/Province') ?></label> 
                         <select id="region_id" name="region_id" title="<?php echo $this->__('State/Province') ?>" class="validate-select" style="display:none;">
                            <option value=""><?php echo $this->__('Please select region, state or province') ?></option>
                         </select>
@@ -83,25 +105,10 @@
                         //]]>
                         </script>
                         <input type="text" id="region" name="region" value="<?php echo $this->escapeHtml($this->getAddress()->getRegion()) ?>"  title="<?php echo $this->__('State/Province') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('region') ?>" />
-              </td>
-			</tr> 
-           <tr>
-				<td>
-                    <label for="zip" class="required"><em>*</em><?php echo $this->__('Zip/Postal Code') ?></label>
-                   
-                        <input type="text" name="postcode" value="<?php echo $this->escapeHtml($this->getAddress()->getPostcode()) ?>" title="<?php echo $this->__('Zip/Postal Code') ?>" id="zip" class="input-text validate-zip-international <?php echo $this->helper('customer/address')->getAttributeValidationClass('postcode') ?>" />
-                   </td>
-			</tr> 
-                <tr>
-				<td>
-                    <label for="country" class="required"><em>*</em><?php echo $this->__('Country') ?></label>
-                     
-                        <?php echo $this->getCountryHtmlSelect() ?>
-                     
-              </td>
-			</tr> 
-			 <tr>
-				<td>
+			</td>
+		</tr>   
+		<tr>
+			<td> 
             <li<?php if($this->canSetAsDefaultBilling()) echo ' class="control"' ?>>
                 <?php if($this->isDefaultBilling()): ?>
                     <strong><?php echo $this->__('Default Billing Address') ?></strong>
@@ -120,25 +127,58 @@
                     <input type="hidden" name="default_shipping" value="1" />
                 <?php endif; ?>
             </li> 
-			
-              </td>
-			</tr> 
-			<tr>
-				<td>
-					<div class="rad_8 btn_block">  
-							<button type="submit" title="<?php echo $this->__('Save Address') ?>" class="button"><span><span><?php echo $this->__('Save Address') ?></span></span></button>
-						 
-					</div><p class="back-link"><a href="<?php echo $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
-							
-							<p class="required"><?php echo $this->__('* Required Fields') ?></p>
-              </td>
-			</tr> 
-	</table>
+	</td>
+	</tr>
+	<tr>
+		<td>
+			<div class="rad_8 btn_block">  
+				<button type="submit" title="<?php echo $this->__('Save Address') ?>" class="button"><span><span><?php echo $this->__('Save Address') ?></span></span></button>
+			</div>				
+		   <p class="required"><?php echo $this->__('* Required Fields') ?></p>
+		</td>
+	</tr> 
+	
+	</table> 
 </form>
-</div>
 <script type="text/javascript">
 //<![CDATA[
     var dataForm = new VarienForm('form-validate', true);
     new RegionUpdater('country', 'region', 'region_id', <?php echo $this->helper('directory')->getRegionJson() ?>, undefined, 'zip');
 //]]>
+
+	if (CraftyPostcodeCreate) {
+				addressPostCodeObj = CraftyPostcodeCreate();
+				addressPostCodeObj.set("access_token","<?php echo $conf['craftyclicks']['access_token'];?>");
+				addressPostCodeObj.set("max_width", '260px');
+				addressPostCodeObj.set("result_elem_id", 'address_result');
+				addressPostCodeObj.set("elem_company", 'company');
+				addressPostCodeObj.set("elem_street1", 'street_1');
+				addressPostCodeObj.set("elem_street2", 'street_2');
+				addressPostCodeObj.set("elem_street3", 'street_3');
+				addressPostCodeObj.set("elem_town",    'city');
+				addressPostCodeObj.set("elem_postcode",'zip');
+				addressPostCodeObj.set("first_res_line", "<?php echo $conf['craftyclicks']['first_res_line'];?>");
+				addressPostCodeObj.set("res_autoselect", "0");
+				addressPostCodeObj.set("busy_img_url", "<?php echo $this->getSkinUrl("images/ajax-loader.gif");?>");
+				addressPostCodeObj.set("err_msg8" , "Daily demo limit reached. To continue, please use one of these postcodes: AA11AA, AA11AB, AA11AD or AA11AE.");
+				addressPostCodeObj.set("single_res_autoselect" , 1);
+				addressPostCodeObj.set("elem_udprn", "udprn");
+				jQuery('#postcode_finder').click(function(){
+					addressPostCodeObj.doLookup();
+				});
+				if ($('country')) {
+					jQuery('#country').change(function(){
+					if (this.value == 'GB') {
+						jQuery('#postcode_finder_btn').show();
+					} else {
+						jQuery('#postcode_finder_btn').hide();
+					}
+					});
+					if (jQuery('#country').val()=='GB') {
+						jQuery('#postcode_finder_btn').show();
+					}
+				}
+			}
 </script>
+
+</div>
