--- a/app/design/frontend/gs-default/default/template/checkout/cart/shipping.phtml
+++ b/app/design/frontend/gs-default/default/template/checkout/cart/shipping.phtml
@@ -1,30 +1,14 @@
-<?php
-/**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
- *
- * @category    design
- * @package     base_default
- * @copyright   Copyright (c) 2012 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
- */
-?>
-<?php /** @var $this Mage_Checkout_Block_Cart_Shipping */ ?>
+<?php if(true) : ?>
+<div class="e_delivery">
+	<p>5.50</p>
+	<p></p>
+	<p>Estimated Delivery<span>Based on standard UK delivery. See more <a href="#">Delivery Information</a>.</span></p>
+	<div class="clear"></div>
+</div>
+<?php endif; ?>
+
+
+<?php if(false) : ?>
 <div class="shipping">
     <h2><?php echo $this->__('Estimate Shipping and Tax') ?></h2>
     <div class="shipping-form">
@@ -137,3 +121,4 @@
         </script>
     </div>
 </div>
+<?php endif; ?>
