--- a/app/design/frontend/gs-default/default/template/checkout/total/default.phtml
+++ b/app/design/frontend/gs-default/default/template/checkout/total/default.phtml
@@ -24,34 +24,17 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<?php
-/**
- * Shopping cart totals template
- *
- * @see Mage_Checkout_Block_Cart_Totals
- * @var $this Mage_Checkout_Block_Cart_Totals
- */
-?>
-<?php if ($this->canApplyMsrp()): ?>
-    <div class="cart-msrp-totals"><?php echo $this->__('ORDER TOTAL WILL BE DISPLAYED BEFORE YOU SUBMIT THE ORDER'); ?></div>
-<?php else: ?>
-	<?php /* ?>
-    <table id="shopping-cart-totals-table">
-        <col />
-        <col width="1" />
-        <tfoot>
-            <?php echo $this->renderTotals('footer'); ?>
-        </tfoot>
-        <tbody>
-            <?php echo $this->renderTotals(); ?>
-        </tbody>
-    </table>
-	<?php */ ?>
-		
-	<?php echo $this->renderTotals(); ?>
-	<?php if (!$this->getIsVirtual()): echo $this->getChildHtml('shipping'); endif; ?>
-	<?php echo $this->getChildHtml('coupon') ?>
-	<?php echo $this->renderTotals('footer'); ?>
-	
-	
-<?php endif; ?>
+<?php /* ?>
+<tr>
+    <th colspan="<?php echo $this->getColspan(); ?>" style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right">
+        <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?><strong><?php endif; ?>
+            <?php echo $this->escapeHtml($this->getTotal()->getTitle()); ?>
+        <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?></strong><?php endif; ?>
+    </th>
+    <td style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right">
+        <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?><strong><?php endif; ?>
+            <?php echo $this->helper('checkout')->formatPrice($this->getTotal()->getValue()) ?>
+        <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?></strong><?php endif; ?>
+    </td>
+</tr>
+<?php */ ?>
