--- a/app/design/frontend/gs-default/default/layout/local.xml
+++ b/app/design/frontend/gs-default/default/layout/local.xml
@@ -85,6 +85,19 @@
         <reference name="root">
             <action method="setTemplate"><template>page/gs-2columns-right.phtml</template></action>
         </reference>
+        
+		<reference name="head">
+			<action method="addItem"><type>skin_css</type><name>css/jquery/jquery-ui-1.8.21.custom.css</name></action>
+			<action method="addJs"><script>jquery/jquery-1.7.1.min.js</script></action>
+			<action method="addJs"><script>jquery/jquery-ui-1.8.21.custom.min.js</script></action>
+		</reference>
+        
+        <reference name="product.info.options.wrapper.bottom">
+			<action method="unsetChild"><nane>prices</nane></action>
+			<action method="unsetChild"><nane>product.info.addtocart</nane></action>
+			<action method="unsetChild"><nane>product.info.addto</nane></action>
+        </reference>
+
     </catalog_product_view>
 	
 
