--- a/app/design/frontend/gs-default/default/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/gs-default/default/template/catalog/product/view/media.phtml
@@ -2,8 +2,8 @@
     $_product = $this->getProduct();
     $_helper = $this->helper('catalog/output');
 ?>
+<div class="more-views detail_tn" style="height:458px;">
 <?php if (count($this->getGalleryImages()) > 0): ?>
-<div class="more-views detail_tn">
     <ul>
     <?php foreach ($this->getGalleryImages() as $_image): ?>
         <li>
@@ -13,38 +13,53 @@
         </li>
     <?php endforeach; ?>
     </ul>
-</div>
+<?php else: ?>
+	&nbsp;
 <?php endif; ?>
+</div>
 <?php if ($_product->getImage() != 'no_selection' && $_product->getImage()): ?>
 <div class="product-image product-image-zoom detail_large">
-    <?php
-        $_img = '<img id="image" src="'.$this->helper('catalog/image')->init($_product, 'image').'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
-        echo $_helper->productAttribute($_product, $_img, 'image');
-    ?>
+	<?php
+		$_img = '<img id="image" src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(255,456).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
+		echo $_helper->productAttribute($_product, $_img, 'image');
+	?>
+<!--<div style="display:none;position:absolute;top:212px;left:136px;background:#ffffff;opacity:0.6;border-radius:5px;" class="scp-please-wait">-->
+	<div style="display:none;position:absolute;top:0;left:0;width:inherit;height:inherit;background:#ffffff;opacity:0.6;border-radius:5px;" class="scp-please-wait">
+		<img src="<?php echo $this->getSkinUrl('images/preview.gif') ?>" class="v-middle" alt="" style="position:absolute;top:212px;left:141px;"/>
+	</div>
 </div>
+<?php if(false): ?>
 <p class="zoom-notice" id="track_hint"><?php echo $this->__('Double click on above image to view full picture') ?></p>
 <div class="zoom">
-    <img id="zoom_out" src="<?php echo $this->getSkinUrl('images/slider_btn_zoom_out.gif') ?>" alt="<?php echo $this->__('Zoom Out') ?>" title="<?php echo $this->__('Zoom Out') ?>" class="btn-zoom-out" />
-    <div id="track">
-        <div id="handle"></div>
-    </div>
-    <img id="zoom_in" src="<?php echo $this->getSkinUrl('images/slider_btn_zoom_in.gif') ?>" alt="<?php echo $this->__('Zoom In') ?>" title="<?php echo $this->__('Zoom In') ?>" class="btn-zoom-in" />
+	<img id="zoom_out" src="<?php echo $this->getSkinUrl('images/slider_btn_zoom_out.gif') ?>" alt="<?php echo $this->__('Zoom Out') ?>" title="<?php echo $this->__('Zoom Out') ?>" class="btn-zoom-out" />
+	<div id="track">
+		<div id="handle"></div>
+	</div>
+	<img id="zoom_in" src="<?php echo $this->getSkinUrl('images/slider_btn_zoom_in.gif') ?>" alt="<?php echo $this->__('Zoom In') ?>" title="<?php echo $this->__('Zoom In') ?>" class="btn-zoom-in" />
 </div>
 <script type="text/javascript">
 //<![CDATA[
-    Event.observe(window, 'load', function() {
-        product_zoom = new Product.Zoom('image', 'track', 'handle', 'zoom_in', 'zoom_out', 'track_hint');
-    });
+	Event.observe(window, 'load', function() {
+		product_zoom = new Product.Zoom('image', 'track', 'handle', 'zoom_in', 'zoom_out', 'track_hint');
+	});
 //]]>
 </script>
+<?php endif; ?>
 <?php else: ?>
 <div class="product-image detail_large">
-    <?php
-        $_img = '<img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(265).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
-        echo $_helper->productAttribute($_product, $_img, 'image');
-    ?>
+	<?php
+		$_img = '<img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(255,456).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
+		echo $_helper->productAttribute($_product, $_img, 'image');
+	?>
+	<div style="display:none;position:absolute;top:0;left:0;width:inherit;height:inherit;background:#ffffff;opacity:0.6;border-radius:5px;" class="scp-please-wait">
+		<img src="<?php echo $this->getSkinUrl('images/preview.gif') ?>" class="v-middle" alt="" style="position:absolute;top:212px;left:141px;"/>
+	</div>
 </div>
 <?php endif; ?>
+<div class="clear"></div>
+<div style="text-align:center; padding:10px 0px 0px 0px;width:307px;float:right;">
+	<?php echo $this->__('+ Click image to zoom') ?>
+</div>
 <?php if(false): ?>
 <!----------------------------------------------------------->
 <?php
