--- a/app/design/frontend/gs-default/default/layout/local.xml
+++ b/app/design/frontend/gs-default/default/layout/local.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0"?>
 <layout>
-	
+
 	<default>
 		<reference name="head">
-             // lets modify the default styles, use our custom styles
-             // first remove the default styles
-             <action method="addCss"><stylesheet>css/styles.css</stylesheet></action>
-             <action method="addItem"><type>skin_css</type><name>css/reset.css</name></action>
-             <action method="addItem"><type>skin_css</type><name>css/styles.css</name></action>
-             <action method="addItem"><type>skin_css</type><name>css/fonts.css</name></action>
-             // add our custom styles
-             <action method="removeItem"><type>css</type><name>css/reset.css</name></action>
-             <action method="removeItem"><type>css</type><name>css/styles.css</name></action>
-             <action method="removeItem"><type>css</type><name>css/styles.css</name></action>
-			 // lets remove the original Ajax Cart Pro js, we will not be modifying the original code in /js/aw_ajaxcartpro folder
-			 // this is to prevent breaking the default layout if we change the package
-			 <action method="removeItem"><type>js</type><name>aw_ajaxcartpro/ajaxcartpro-1.4.6.js</name></action>
-			 <action method="removeItem"><type>js</type><name>aw_ajaxcartpro/ajaxcartpro-community-1.4.6.js</name></action>
-			 <action method="addItem"><type>skin_js</type><name>js/GSWrapper.js</name></action>
-			 // now lets add our customized Ajax Cart Pro js from the gs-default package
-			 <action method="addItem"><type>skin_js</type><name>js/aw_ajaxcartpro/ajaxcartpro-1.4.6.js</name></action>
-			 <action method="addItem"><type>skin_js</type><name>js/aw_ajaxcartpro/ajaxcartpro-community-1.4.6.js</name></action>
+			// lets modify the default styles, use our custom styles
+			// first remove the default styles
+			<action method="addCss"><stylesheet>css/styles.css</stylesheet></action>
+			<action method="addItem"><type>skin_css</type><name>css/reset.css</name></action>
+			<action method="addItem"><type>skin_css</type><name>css/styles.css</name></action>
+			<action method="addItem"><type>skin_css</type><name>css/fonts.css</name></action>
+			// add our custom styles
+			<action method="removeItem"><type>css</type><name>css/reset.css</name></action>
+			<action method="removeItem"><type>css</type><name>css/styles.css</name></action>
+			<action method="removeItem"><type>css</type><name>css/styles.css</name></action>
+			<action method="addItem"><type>skin_css</type><name>css/jquery/jquery-ui-1.8.21.custom.css</name></action>
+			<action method="addItem"><type>js</type><name>jquery/jquery-1.7.2.min.js</name></action>
+			<action method="addItem"><type>js</type><name>jquery/no-conflict.js</name></action>
+			<action method="addJs"><script>jquery/jquery-ui-1.8.21.custom.min.js</script></action>
+			// lets remove the original Ajax Cart Pro js, we will not be modifying the original code in /js/aw_ajaxcartpro folder
+			// this is to prevent breaking the default layout if we change the package
+			<action method="removeItem"><type>js</type><name>aw_ajaxcartpro/ajaxcartpro-1.4.6.js</name></action>
+			<action method="removeItem"><type>js</type><name>aw_ajaxcartpro/ajaxcartpro-community-1.4.6.js</name></action>
+			<action method="addItem"><type>skin_js</type><name>js/GSWrapper.js</name></action>
+			// now lets add our customized Ajax Cart Pro js from the gs-default package
+			<action method="addItem"><type>skin_js</type><name>js/aw_ajaxcartpro/ajaxcartpro-1.4.6.js</name></action>
+			<action method="addItem"><type>skin_js</type><name>js/aw_ajaxcartpro/ajaxcartpro-community-1.4.6.js</name></action>
 		</reference>
-		
+
 		<reference name="root">
 			 <action method="setTemplate"><template>page/gs-2columns-left.phtml</template></action>
 			<reference name="top.links">
@@ -45,15 +49,15 @@
 				<block type="newsletter/subscribe" before="-" name="newsletter" template="newsletter/subscribe.phtml"/>
 			</reference>
 		</reference>
-		
+
 		<reference name="left">
 			<action method="unsetChild"><name>left.newsletter</name></action>
 		</reference>
-		
+
 		<reference name="header">
 			<action method="unsetChild"><name>cart_sidebar</name></action>
 		</reference>
-		
+
         <reference name="header">
             <block type="checkout/cart_sidebar" name="cart_sidebar" template="checkout/cart/sidebar.phtml" before="-">
                 <action method="addItemRender"><type>simple</type><block>checkout/cart_item_renderer</block><template>checkout/cart/sidebar/default.phtml</template></action>
@@ -85,13 +89,7 @@
         <reference name="root">
             <action method="setTemplate"><template>page/gs-2columns-right.phtml</template></action>
         </reference>
-        
-		<reference name="head">
-			<action method="addItem"><type>skin_css</type><name>css/jquery/jquery-ui-1.8.21.custom.css</name></action>
-			<action method="addJs"><script>jquery/jquery-1.7.1.min.js</script></action>
-			<action method="addJs"><script>jquery/jquery-ui-1.8.21.custom.min.js</script></action>
-		</reference>
-        
+
         <reference name="product.info.options.wrapper.bottom">
 			<action method="unsetChild"><nane>prices</nane></action>
 			<action method="unsetChild"><nane>product.info.addtocart</nane></action>
@@ -99,6 +97,6 @@
         </reference>
 
     </catalog_product_view>
-	
+
 
 </layout>
