--- a/skin/frontend/gs-default/default/css/styles.css
+++ b/skin/frontend/gs-default/default/css/styles.css
@@ -1570,6 +1570,201 @@ ul.dbrands li .desc_bname a:hover {
 	float:left;
 	margin:0px 10px 0px 0px;
 }
+.checkout_wrapper{
+	display:block;	
+}
+.checkout_wrapper .detail_title{
+	font-size:13px;
+	padding:0px 20px 15px;	
+}
+.checkout_block{
+	width:277px;
+	float:left;
+	margin:0px 33px 0px 0px;
+	overflow:hidden;
+}
+.checkout_block .head_area{
+	background:#dfdfe0;
+	padding:5px 20px;
+	margin:0px 0px 12px 0px;
+}
+.checkout_block .block_step1{
+	display:block;
+	font-size:11px;
+}
+.checkout_block input[type="text"]{
+	color:#606163;
+	border:1px solid #b6b6b6;
+	padding:2px 4px;
+}
+.checkout_block input.error_field[type="text"]{
+	border:1px solid #EF132D;
+}
+.checkout_block table{
+	margin:0px auto 12px;
+}
+.checkout_block td{
+	padding:3px 0px;
+}
+.checkout_block label{
+	display:block;
+}
+.checkout_block .block_step1 input[type="text"]{
+	width:267px;
+}
+.checkout_block .block_step1 .fleft input[type="text"], .checkout_block .block_step1 .fright input[type="text"]{
+	width:125px;
+}
+.checkout_block .block_step1 input[type="checkbox"], .checkout_block .block_step3 input[type="checkbox"]{
+	float:left;
+	width:13px;
+	height:13px;
+	margin:2px 5px 2px 0px;
+}
+.checkout_block .block_step1 span.cbox_text, .checkout_block .block_step3 span.cbox_text{
+	float:left;
+	width:255px;
+}
+.checkout_block .block_step2{
+	display:block;
+	font-size:11px;
+}
+.checkout_block .block_step2 input[type="radio"]{
+	float:left;
+	width:13px;
+	height:13px;
+	margin:2px 5px 2px 0px;
+}
+.checkout_block .block_step2 span.cbox_text{
+	float:left;
+	width:200px;
+	padding-top:1px;
+}
+.checkout_block .block_step2 .payment_area{
+	margin:auto;
+	width:227px;
+}
+.checkout_block .block_step2 .payment_area input[type="text"]{
+	width:213px;
+}
+.checkout_block .block_step2 .payment_area select {
+    color:#606163;
+    padding:4px;
+    width:220px;
+}
+.checkout_block .block_step2 .exp_month {
+    width:140px;
+	float:left;
+}
+.checkout_block .block_step2 .exp_month select{
+    color:#606163;
+    padding:4px;
+    width:132px;
+}
+.checkout_block .block_step2 .exp_year {
+    width:78px;
+	float:right;
+}
+.checkout_block .block_step2 .exp_year select{
+    color:#606163;
+    padding:4px;
+    width:70px;
+}
+.checkout_block .block_step2 .fleft input[type="text"]{
+	width:125px;
+}
+.checkout_block .block_step2 .fleft a, .checkout_block .block_step2 .fleft a.hover{
+	color:#77a33f;
+	float:left;
+	margin:18px 0px 0px 8px;
+}
+.checkout_block .block_step3 {
+    display:block;
+    font-size:11px;
+}
+.checkout_block .block_step3 .tbl_prodtotal{
+}
+.checkout_block .block_step3 .tbl_prodtotal th{
+	border-bottom:1px solid #cccccc;
+	font-weight:700;
+}
+.checkout_block .block_step3 .tbl_prodtotal td{
+	border-bottom:1px solid #cccccc;
+	padding:3px;
+}
+.checkout_block .block_step3 .head_result {
+	background:#606163;
+	padding:8px 10px;
+	font-size:12px;
+	color:#fff;
+	font-weight:700;
+	text-align:right;
+	margin:0px 0px 15px 0px;
+}
+.checkout_block .block_step3 input[type="text"] {
+    width:264px;
+}
+.checkout_block .block_step3 textarea {
+    width:264px;
+	height:30px;
+	padding:4px;
+	resize:none;
+	border:1px solid #ccc;
+	background:none;
+}
+.checkout_block .btn_block{
+	overflow:hidden;
+	font-size:13px;
+	font-weight:700;
+	color:#fff;
+	background:url(../images/btn_bg1.jpg) repeat-x 0 0;
+	float:right;
+	margin:0px 0px 0px;
+}
+.checkout_block .btn_block button{
+	background:none;
+	border:none;
+	padding:5px 20px 6px;
+}
+.checkout_block .btn_block span{
+	position:static;
+	color:#fff;
+	font-size:13px;
+	font-weight:700;
+}
+.checkout_block .btn_block2{
+	overflow:hidden;
+	font-size:11px;
+	font-weight:700;
+	color:#fff;
+	float:left;
+	background:url(../images/btn_bg2.jpg) repeat-x 0 0;
+	border:1px solid #ccc;
+	margin:5px 0px 0px;
+}
+.checkout_block .btn_block2 button{
+	background:none;
+	border:none;
+	padding:3px 10px 4px;
+}
+.checkout_block .btn_block2 span{
+	position:static;
+	color:#606163;
+	font-size:11px;
+	font-weight:700;
+}
+.checkout_block .block_step3 select {
+    color:#606163;
+    padding:4px;
+    width:272px;
+}
+.checkout_block span.cbox_text a, .checkout_block span.cbox_text a:hover{
+	color:#77a33f;
+}
+select.error_field{
+	border:1px solid #EF132D;
+}
+
 /*------------------------body begin------------------------*/
 /*------------------------body  ends------------------------*/
 /*------------------------footer begin------------------------*/
